✨ 테마파크 이미지 개선 및 UI 업데이트
- 실제 테마파크 이미지 URL로 교체
- 이미지 로딩 에러 처리 개선 (referrerpolicy 추가)
- 투어 루트 및 상품 카드 이미지 최적화
- 통계 및 검색 기능 추가
- 반응형 디자인 개선

--- a/.gitignore
+++ b/.gitignore
@@ -55,11 +55,19 @@ yarn-error.log*
 # Node modules (if adding build tools later)
 node_modules/
 npm-debug.log
+package-lock.json
+yarn.lock
 
 # Environment variables (if needed)
 .env
 .env.local
 .env.*.local
+config.local.js
+secrets.js
+
+# API Keys (보안 중요!)
+*.env
+.env.*
 
 # Build output (if adding build step)
 dist/
