--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+# OS
+.DS_Store
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+.python-version
+
+# Environments
+.env
+.venv
+venv/
+env/
+
+# Node / Frontend
+node_modules/
+dist/
+build/
+
+# Editors/IDE
+.vscode/
+.idea/
+
+# Testing/coverage
+.pytest_cache/
+coverage/
 # macOS
 .DS_Store
 .AppleDouble
