feat: 아시아 투어 지도 시각화 및 Git 충돌 해결

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,8 @@ server.pid
 
 # Documentation temp files
 *.md.backup
+
+# Crawled data (auto-generated)
+prices-data.json
+prices-data-detailed.json
+
